--- a/geo/package.json
+++ b/geo/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "cheerio": "^1.0.0",
+    "express": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
+    "@playwright/test": "^1.51.1",
+    "@types/node": "^22.14.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
